--- a/src/components/components/css/CustomStyle.css
+++ b/src/components/components/css/CustomStyle.css
@@ -1,17 +1,16 @@
 /**-- * animation rotate-center * --------- */
 @keyframes rotate-center {
- 0% {
-   -webkit-transform: rotate(0);
-           transform: rotate(0);
- }
- 100% {
-   -webkit-transform: rotate(360deg);
-           transform: rotate(360deg);
- }
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 /**-- * animation rotate-center * --------- */
-
 
 .my-button-1 {
   border: solid 1px rgb(255, 195, 17) !important;
@@ -32,20 +31,36 @@
   background: rgb(255, 195, 17) !important;
 }
 
-
 .my-button-2 {
   color: rgb(255, 195, 17);
   padding: 0.5em 1.2em !important;
-  border:none;
+  border: none;
   font-weight: 550 !important;
   text-transform: uppercase !important;
   border-bottom: 2px solid rgb(255, 195, 17);
   background: transparent;
 }
+.my-button-3 {
+  background: #dd2f6e;
+  padding: 0.5em 1.2em !important;
+  border: none;
+  font-weight: 550 !important;
+  text-transform: uppercase !important;
+  color: white;
+}
+.my-button-3:hover {
+  background: white !important;
+  color: #dd2f6e;
+  transition: 0.5s;
+}
 
 .ex-tb {
   background-size: 100% 200%;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, rgb(255, 195, 17) 50%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 50%,
+    rgb(255, 195, 17) 50%
+  );
   transition: background-position 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
@@ -59,7 +74,7 @@
   color: #fff;
 }
 
-.ex-tb.ex-t:hover{
+.ex-tb.ex-t:hover {
   color: #333;
 }
 .ex-lr {
@@ -68,7 +83,7 @@
   background-image: linear-gradient(to left, #fff 50%, #333 50%);
   transition: background-position 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-.ex-lr:hover{
+.ex-lr:hover {
   background-position: 0 0;
   color: #fff;
 }
@@ -76,12 +91,12 @@
   background-image: linear-gradient(to left, #fff 50%, #333 50%);
   background-position: 100% 0;
 }
-.ex-lr.ex-r:hover{
+.ex-lr.ex-r:hover {
   background-position: 0% 0;
   color: #fff;
 }
-.back-to-top-btn{
-  color:white !important;
+.back-to-top-btn {
+  color: white !important;
   background: black !important;
   font-weight: 2em;
   border-radius: 50%;
@@ -95,16 +110,16 @@
   left: calc(100% - 64px);
   font-size: 2em;
 }
-.back-to-top-btn:hover{
-  cursor:pointer;
+.back-to-top-btn:hover {
+  cursor: pointer;
   animation: rotate-center 1s;
 }
-.show-back-to-top-btn{
-  display:block;
-  animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+.show-back-to-top-btn {
+  display: block;
+  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
-.hide-back-to-top-btn{
-  display:none;
+.hide-back-to-top-btn {
+  display: none;
 }
 @keyframes slide-top {
   0% {
@@ -115,9 +130,9 @@
   }
 }
 .slide-top {
-	animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
-.youtube-video-16-9{
+.youtube-video-16-9 {
   position: relative;
   width: 100%;
   padding-bottom: 56.25%;
@@ -129,4 +144,19 @@
   width: 100%;
   height: 100%;
   border: 0;
+}
+.my-button-4 {
+  font-weight: bold;
+  font-size: 1em;
+  font-family: "Bebas Neue", cursive;
+  padding: .8em 1.2em;
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #ffc311;
+  transition: 0.3s;
+  border:none;
+}
+.my-button-4:hover {
+  background: #282828;
 }
