--- a/src/components/components/css/CustomStyle.css
+++ b/src/components/components/css/CustomStyle.css
@@ -132,6 +132,32 @@
 .slide-top {
   animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
+.image-16-9 {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+.image-16-9 img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+.image-square {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+}
+.image-square img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 .youtube-video-16-9 {
   position: relative;
   width: 100%;
@@ -149,13 +175,13 @@
   font-weight: bold;
   font-size: 1em;
   font-family: "Bebas Neue", cursive;
-  padding: .8em 1.2em;
+  padding: 0.8em 1.2em;
   color: white;
   text-transform: uppercase;
   text-decoration: none;
   background: #ffc311;
   transition: 0.3s;
-  border:none;
+  border: none;
 }
 .my-button-4:hover {
   background: #282828;
