--- a/src/components/css/Contact.css
+++ b/src/components/css/Contact.css
@@ -4,6 +4,7 @@
   text-align: center;
   margin: 0.5em;
   font-weight: bold;
+  margin-top:-1em;
 }
 .form-label{
   color : #777777;
@@ -17,5 +18,5 @@
 .contact-map iframe{
   border:none;
   width:100%;
-  height:80vh;
+  height:70vh;
 }
