--- a/src/components/css/HomeIntro.css
+++ b/src/components/css/HomeIntro.css
@@ -1,10 +1,12 @@
-.categories {
+.home-intro-categories {
   margin-top: 1em;
   margin-bottom: 3em;
   justify-content: center;
+  display: flex;
+  flex-direction: row;
 }
-.categories div {
-  padding: 1.2em;
+.home-intro-categories div {
+  padding: 0 1.2em;
 }
 .the-goty {
   padding: 0;
