--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -1,202 +1,61 @@
-@keyframes collapse-right {
-  from {
-    width: 0px;
-  }
-  to {
-    width: 21.4em;
-  }
+.my-nav-bar {
+  height: 80px !important;
+  color: white !important;
+  background: rgba(17, 17, 17, 0.75) !important;
+  box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%) !important;
 }
-@keyframes scale-up-tl {
-  0% {
-    transform: scale(0.5);
-    transform-origin: 0% 0%;
-  }
-  100% {
-    transform: scale(1);
-    transform-origin: 0% 0%;
-  }
-}
-
-@media screen and (max-width: 991px) {
-  .my-nav-collapse-flex {
-    display: flex;
-    /* overflow:hidden; */
-  }
-  .my-collapse-none {
-    display: block !important;
-  }
-  .my-nav-collapse {
-    width: 21.4em !important;
-    height: 100vh !important;
-    left: 0 !important;
-    position: absolute;
-    top: 0 !important;
-    animation: scale-up-tl 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-    background: white;
-  }
-  .my-nav-link {
-    font-weight: lighter;
-    border-bottom: 1px solid rgb(201, 201, 201) !important;
-    padding: 2em 2em !important;
-  }
-  .my-nav-social-link {
-    padding: 4px !important;
-    font-size: 1em !important;
-  }
-  .my-nav-login-link,
-  .my-nav-signup-link {
-    display: none !important;
-  }
-  .my-nav-login-link,
-  .my-nav-signup-link,
-  .my-nav-social-link,
-  .my-nav-link {
-    color: black !important;
-  }
-  .my-nav-social-link:hover,
-  .my-nav-link:hover {
-    color: #ffc311 !important;
-  }
-  .my-Nav {
-    flex-direction: row !important;
-  }
-  .my-nav-social-link {
-    display: inline !important;
-    margin: 0em 1em;
-  }
-  .my-nav-login-link {
-    margin-right: 1em;
-  }
-  .my-nav-login-signup-collapse {
-    display: flex !important;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 2em;
-  }
-  .dropdown-menu.show {
-    display: block !important;
-  }
-  .dropdown-item{
-    padding: 6px 12px!important;
-    margin: 0 !important;
-  }
-}
-.my-nav-brand {
-  color: rgba(255, 255, 255, 0.842) !important;
-  font-size: 1.4em;
-  font-weight: bold;
-  line-height: 32px;
-}
-.my-nav-brand img{
-  height:32px;
-}
-
-.dropdown {
-  margin-top: 0.3em;
+.my-nav-dropdown {
+  font-size: 1em;
+  align-items: center;
+  line-height: 37.61px;
+  color: #ccc;
+  transition: 0s!important;
 }
 .my-nav-link {
-  padding: 0.5em 1em !important;
-  font-size: 0.85em;
-  font-weight: 500;
+  color: #ccc !important;
+  padding: 0.5rem 1rem;
+  font-size: 1em;
+  transition: 0s!important;
 }
-.my-nav-link,
-.my-nav-social-link {
-  color: white;
-  font-weight: bold;
+.my-nav-link:hover, .my-nav-dropdown:hover {
+  color: white !important;
+  text-shadow: 0 0 10px #69e0ff, 0 0 20px #69e0ff, 0 0 40px #69e0ff;
 }
-.my-nav-social-link {
-  padding: 0.25em 0.25em;
-  font-size: 1.2em;
+.my-nav-link-active {
+  color: white !important;
+  text-shadow: 4px 4px 20px #ff63b1, -5px 1px 30px #ff6ab4;
 }
-.my-nav-link:hover,
-.my-nav-social-link:hover {
-  color: #ffc311;
-  text-decoration: none;
+.my-nav-signup-link, .my-nav-login-link{
+  color:white;
+  padding: .4em .8em;
+  font-size: 1em;
+  transition: 0s!important;
 }
-.my-nav-login-link,
-.my-nav-signup-link {
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 0.7em;
-  height: 32px;
-  line-height: 32px;
-  background: #ffc311;
-  color: white;
+.my-nav-signup-link{
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  border-right: solid 1px rgb(14, 8, 11, .6);
+}.my-nav-login-link{
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
 }
-.my-nav-login-link:hover,
-.my-nav-signup-link:hover {
-  text-decoration: none;
-  color: rgb(240, 240, 240);
+.my-nav-signup-link:hover, .my-nav-login-link:hover{
+  text-shadow: 0 0 10px #69e0ff, 0 0 20px #69e0ff, 0 0 40px #69e0ff;
+  color:white;
 }
-.my-nav-signup-link {
-  border-top-left-radius: 40px;
-  border-bottom-left-radius: 40px;
-  padding: 0em.7em;
-  border-right: solid 1px #917d43;
-  margin-left: 0.6em;
+.dropdown-menu{
+  background:  rgba(17, 17, 17, 0.658)!important;
+  border:none;
+  border-radius: 0px!important;
+  min-width: 256px;
 }
-.my-nav-login-link {
-  border-left: solid 1px #917d43;
-  border-top-right-radius: 40px;
-  border-bottom-right-radius: 40px;
-  padding: 0em 0.7em;
+.dropdown-menu a{
+  color: white !important;
+  padding: 1em 2em!important;
 }
-.my-scrollbars::-webkit-scrollbar {
-  width: 0.4em;
-  height: 1em;
+.dropdown-menu a:hover{
+  background:rgba(255, 255, 255, 0.39);
 }
-.my-scrollbars::-webkit-scrollbar-track {
-  background: white;
-}
-.my-scrollbars::-webkit-scrollbar-thumb {
-  background: #E4E4E4;
-}
-.my-scrollbars::-webkit-scrollbar-thumb:hover {
-  background: rgb(153, 153, 153);
-}
-.my-collapse-none {
-  display: none;
-}
-.my-nav-signup-collapse,
-.my-nav-login-collapse {
-  display: inline !important;
-  padding: 0.7em 1.4em;
-  color: white;
-  background: #ffc311;
-  font-weight: bold !important;
-}
-.my-nav-signup-collapse:hover,
-.my-nav-login-collapse:hover {
-  color: #ececec;
-  text-decoration: none !important;
-}
-.my-nav-login-signup-collapse {
-  display: none !important;
-}
-.my-nav-signup-collapse {
-  border-right: 1px solid rgb(97, 97, 97);
-}
-.my-nav-signup-collapse {
-  border-left: 1px solid rgb(97, 97, 97);
-}
-.dropdown-menu.show{
-    color:black !important;
-    animation: scale-up-tl 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both!important;
-}
-.my-nav-bg-dark{
-  background: #262626 !important;
-  transition: .9s ease-out;
-}
-.my-nav-bg-transparent{
-  background: #262626 !important;
-  transition: .5s ease-out;
-}
-.my-nav-scroll-visible{
-  transition: .5s ease-out;
-}
-.nav-margin{
-  height:80px;
-}
-.my-nav-bg-white{
-  background: white !important;
+.my-nav-dropdown-user .dropdown-menu{
+  left: -100px !important;
 }
