--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body {
   width: 462px;
   margin: auto;
   margin-top: 12px;
-  margin-bottom: 12px;
+  margin-bottom: 1em;
 }
 .search-form > .search-input {
   outline: none;
@@ -69,6 +69,7 @@ body {
   border: 0;
   float: left;
   border-radius: 4px 0 0 4px;
+  border: 1px solid rgba(38, 50, 56, 0.8);
 }
 .search-form > .search-input:focus {
   outline: none;
