--- a/src/components/components/css/CustomStyle.css
+++ b/src/components/components/css/CustomStyle.css
@@ -144,6 +144,18 @@
   width: 100%;
   height: 100%;
   border: 0;
+}.image-16-6 {
+  position: relative;
+  width: 100%;
+  padding-bottom: 38%;
+}
+.image-16-6 img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 .image-square {
   position: relative;
