--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,13 @@ body {
 .no-site h1{
   font-size: 3em;
 }
+.my-background-grey{
+  background: rgb(250, 250, 250);
+}
+.my-background-white{
+  background:white;
+}
+.listsanpham-title{
+  margin-top: 1em;
+  margin-left: 2em;
+}
