--- a/src/components/components/css/CustomStyle.css
+++ b/src/components/components/css/CustomStyle.css
@@ -157,6 +157,19 @@
   height: 100%;
   border: 0;
 }
+.image-16-4 {
+  position: relative;
+  width: 100%;
+  padding-bottom: 25%;
+}
+.image-16-4 img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 .image-square {
   position: relative;
   width: 100%;
