--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -9,15 +9,16 @@
   align-items: center;
   line-height: 37.61px;
   color: #ccc;
-  transition: 0s!important;
+  transition: 0s !important;
 }
 .my-nav-link {
   color: #ccc !important;
   padding: 0.5rem 1rem;
   font-size: 1em;
-  transition: 0s!important;
+  transition: 0s !important;
 }
-.my-nav-link:hover, .my-nav-dropdown:hover {
+.my-nav-link:hover,
+.my-nav-dropdown:hover {
   color: white !important;
   text-shadow: 0 0 10px #69e0ff, 0 0 20px #69e0ff, 0 0 40px #69e0ff;
 }
@@ -25,64 +26,73 @@
   color: white !important;
   text-shadow: 4px 4px 20px #ff63b1, -5px 1px 30px #ff6ab4;
 }
-.my-nav-signup-link, .my-nav-login-link{
-  color:white;
-  padding: .4em .8em;
+.my-nav-signup-link,
+.my-nav-login-link {
+  color: white;
+  padding: 0.4em 0.8em;
   font-size: 1em;
-  transition: 0s!important;
+  transition: 0s !important;
 }
-.my-nav-signup-link{
+.my-nav-signup-link {
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
-  border-right: solid 1px rgb(14, 8, 11, .6);
-}.my-nav-login-link{
+  border-right: solid 1px rgb(14, 8, 11, 0.6);
+}
+.my-nav-login-link {
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
 }
-.my-nav-signup-link:hover, .my-nav-login-link:hover{
+.my-nav-signup-link:hover,
+.my-nav-login-link:hover {
   text-shadow: 0 0 10px #69e0ff, 0 0 20px #69e0ff, 0 0 40px #69e0ff;
-  color:white;
+  color: white;
 }
-.dropdown-menu{
-  background:  rgba(17, 17, 17, 0.658)!important;
-  border:none;
-  border-radius: 0px!important;
+.dropdown-menu {
+  background: rgba(17, 17, 17, 0.658) !important;
+  border: none;
+  border-radius: 0px !important;
   min-width: 256px;
 }
-.dropdown-menu a{
+.dropdown-menu a {
   color: white !important;
-  padding: 1em 2em!important;
+  padding: 1em 2em !important;
 }
-.dropdown-menu a:hover{
-  background:rgba(255, 255, 255, 0.39);
+.dropdown-menu a:hover {
+  background: rgba(255, 255, 255, 0.39);
 }
-.my-nav-dropdown-user .dropdown-menu{
+.my-nav-dropdown-user .dropdown-menu {
   left: -100px !important;
 }
-.my-nav-dropdown-add-to-cart .dropdown-menu{
-  right: -120px!important;
-  background: white !important;
- }
-.my-nav-cart{
- width:356px;
- display: grid;
- grid-template-columns: .5fr auto; 
+.my-nav-dropdown-add-to-cart .dropdown-menu {
+  right: -120px !important;
+  background: rgb(245, 245, 245) !important;
 }
-.my-nav-cart a{
-  padding: 6px!important;
-  transition: all 0s!important;
-  color:rgb(51, 51, 51)!important;
-  font-weight: bold !important;
+.my-nav-dropdown-cart {
+  width: 356px;
+  height: 400px!important;
+  overflow-y: scroll !important;
 }
-.my-nav-cart a:hover{
-  background: none !important;
-  color: black !important;
+.my-nav-dropdown-cart-end{
+  text-align: center !important;
 }
-.my-nav-cart-delete-btn{
-  border:none;
-  background:none;
-  color:rgb(16, 221, 16);
+.my-nav-dropdown-cart-end .my-nav-dropdown-cart-view-more-btn{
+  color: #ff63b1 !important;
+  display:inline-block!important;
+  border: solid 1px rgba(0,0,0,0)!important;
+  border-radius: 50px;
 }
-.my-nav-cart-delete-btn:hover{
-  color:rgb(236, 37, 37);
+.my-nav-dropdown-cart-end .my-nav-dropdown-cart-view-more-btn:hover{
+  color: white !important;
+  background: #ff63b1 !important;
+}
+.my-nav-dropdown-cart-check-out-btn{
+  background: #ff63b1!important;
+  color:white !important;
+  border: solid 1px rgba(0, 0, 0, 0) !important;
+  border-radius: 50px;
+}
+.my-nav-dropdown-cart-check-out-btn:hover{
+  background: white!important;
+  border-color: #ff63b1 !important;
+  color: #ff63b1 !important;
 }
